# cgtee_project

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmakelists_status.txt
bash_scripts/: debug_compile.sh  release_compile.sh
install/Debug/assets/models/tree/: license.txt  scene.gltf
install/Debug/lib/pkgconfig/: glfw3.pc
install/Debug/shaders/: cube.frag  depth.vert
src/: cgtee.cpp  cvgtee.cpp
src/assets/models/mushroom/: license.txt  scene.gltf
src/assets/models/tree/: license.txt  scene.gltf
src/assets/models/tree2/: license.txt  scene.gltf
src/assets/models/unicorn/: scene.gltf
src/other/: controls.cpp  controls.h  enums.h  glglobals.cpp  glglobals.h  globals.cpp  globals.h  key_callback.cpp  key_callback.h  opengl_globals.h  pathglobals.cpp  pathglobals.h
src/render/: model.cpp  model.h  shader.cpp  shader.h  shadow.cpp  shadow.h  texture.cpp  texture.h
src/shaders/: cube.frag  cube.vert  depth.frag  lighting.frag  lighting.vert
src/world/: chunk.cpp  chunk.h  chunkcoord.h  chunkrawdata.h  cube.h  mesh.cpp  mesh.h  physics.cpp  physics.h  world.cpp  world.h  worldgen.cpp  worldgen.h
